controller/pkg/agentgateway/translator/testdata/models/_defaults.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: agentgateway
spec:
  controllerName: agentgateway.dev/agentgateway
---
apiVersion: v1
kind: Service
metadata:
  name: http-backend
  namespace: default
spec:
  ports:
  - port: 8080
